@@ -734,8 +734,12 @@ command to generate the output files.
     <glob pattern="*.cgi"/>
   </mime-type>
   <mime-type type="application/x-chess-pgn">
-    <_comment>PGN chess game</_comment>
+    <_comment>PGN chess game notation</_comment>
     <glob pattern="*.pgn"/>
+    <sub-class-of type="text/plain"/>
+    <magic priority="50">
+      <match type="string" value="[Event " offset="0"/>
+    </magic>
   </mime-type>
   <mime-type type="application/x-chm">
     <comment>CHM document</comment>
